# komandara

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.sh  komandara_axi4.core  komandara_axi4lite.core  komandara_common.core  komandara_k10.core  pulp_riscv_dbg.core  python-requirements.txt
.agent/rules/: verification_fusesoc.mdc
.cursor/rules/: project_identity.mdc  systemverilog_asic.mdc
cmake/: copy_verilator_exe.cmake  program_fpga.sh.in
ip/axi4/: komandara_axi4.core
ip/axi4/rtl/: komandara_axi4_slave.sv
ip/axi4/rtl/tb/: tb_axi4_master.sv  tb_axi4_slave.sv
ip/axi4lite/: komandara_axi4lite.core
ip/axi4lite/rtl/: komandara_axi4lite_master.sv  komandara_axi4lite_slave.sv
ip/axi4lite/rtl/tb/: tb_axi4lite_master.sv  tb_axi4lite_slave.sv  tb_axi4lite_xbar.sv
ip/common/: komandara_common.core
ip/common/rtl/: komandara_arbiter.sv  komandara_bram.sv  komandara_bram_axi4lite.sv  komandara_bus2axi4lite.sv  komandara_skid_buffer.sv
rtl/: CMakeLists.txt
rtl/ip/axi4/rtl/: komandara_axi4_master.sv  komandara_axi4_pkg.sv  komandara_axi4_xbar.sv
rtl/ip/axi4/rtl/tb/: tb_axi4_xbar.sv
rtl/ip/axi4lite/rtl/: komandara_axi4lite_pkg.sv  komandara_axi4lite_xbar.sv
rtl/ip/common/rtl/: komandara_bram.sv  komandara_bram_axi4lite.sv  komandara_obi_mux.sv  komandara_obi_xbar.sv
rtl/k10/: k10_alu.sv  k10_compressed_decoder.sv  k10_core.sv  k10_csr.sv  k10_decode.sv  k10_execute.sv  k10_fetch.sv  k10_hazard_unit.sv  k10_imm_gen.sv  k10_lsu.sv  k10_memory.sv  k10_mul_div.sv  k10_pmp.sv  k10_regfile.sv  k10_top.sv  k10_tracer.sv  k10_writeback.sv  komandara_k10.core  komandara_k10_pkg.sv
rtl/k10/periph/: k10_sim_ctrl.sv  k10_timer.sv  k10_uart.sv
rtl/k10/soc/: k10_soc.sv
rtl/k10/tb/: k10_link.ld  k10_tb.cpp  k10_tb.sv  komandara.vlt  riscv_core_setting.sv  tb_mul_div.cpp  tb_mul_div.sv  testlist.yaml
scripts/: bin2hex.py  env.sh  fpga_run.sh  genesys2_ila_build.tcl  ila_arm.tcl  ila_capture.tcl  ila_upload.tcl  install_venv_hook.sh  k10-genesys2-openocd.tcl  patch_riscv_dv.py  program_fpga.sh  program_genesys2.sh  run_axi4_master_verify.tcl  run_axi4_slave_verify.tcl  run_axi4_xbar_verify.tcl  run_fpga_netlist_smoke.sh  run_genesys2_netlist_smoke.sh  run_master_verify.tcl  run_riscv_dv.sh  run_selfcheck_test.sh  run_slave_verify.tcl  run_xbar_verify.tcl  setenv.sh  setup_tools.sh  verilog_byte2word.py  vivado_env.sh  vivado_netlist_sims.tcl  vivado_program_fpga.tcl  vivado_signoff_reports.tcl
spec/: riscv-privileged-20211203.txt  riscv-spec-20191213.txt
sw/k10/: CMakeLists.txt  k10_link.ld  riscv32.cmake  startup.S  unaligned_test.S
sw/k10/test/: CMakeLists.txt  k10_c_benchmark.c  k10_c_selftest.c  k10_debug_entry_probe.c  k10_debug_hold.S  k10_debugrom_probe.c  netlist_sw_irq_smoke.S  perf_counter_test.S  riscv_amo_test.S  riscv_invalid_csr_test.S  riscv_pmp_test.S  riscv_privileged_mode_rand_test.S  smoke_test.S
sw/k10/test/include/: k10.h
sw/k10/tests/: k10_test_suite.c
vscode_ext/komandara-wizard/: CHANGELOG.md  README.md  package-lock.json  package.json
vscode_ext/komandara-wizard/src/: config.ts  extension.ts  templates.ts
